# timewarp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  timewarp-project.md  timewarp_interactive_debug.py
.github/workflows/: ci.yml  release.yml
docs/: hitl.md  otel-quickstart.md  privacy.md  refactor-plan.md
examples/: __init__.py  diff_demo.sh  record_demo.py  resume_demo.py  what_if_demo.py
examples/bench/: record_1k.py
examples/langgraph_demo/: __init__.py  app.py  debug_repl_e2e.py  diff_runs.py  mcp_app.py  multi_agent_full.py  parallel_app.py  run_all.py  time_freeze_app.py
src/timewarp/: __init__.py  bindings.py  cli.py  codec.py  diff.py  events.py  langgraph.py  memory.py  replay.py  store.py  telemetry.py  version.py
src/timewarp/adapters/: __init__.py  installers.py  langgraph.py
src/timewarp/adapters/langgraph/: __init__.py  anchors.py  batch.py  classify.py  hashing.py  memory.py  messages.py  recorder.py  retrieval.py  serialize.py  taps.py
src/timewarp/cli/: main.py
src/timewarp/cli/commands/: debug.py  diff.py  dspy.py  events.py  fsck.py  inject.py  resume.py  tools.py
src/timewarp/exporters/: langsmith.py
src/timewarp/langgraph/: classify.py  memory.py  messages.py  recorder.py  retrieval.py  taps.py
src/timewarp/replay/: langgraph.py  session.py  wrappers.py
src/timewarp/utils/: json.py
tests/: test_adapter_langgraph.py  test_anchors_diff_consistency.py  test_cli_dspy_fork.py  test_cli_e2e_langgraph.py  test_cli_filters.py  test_cli_memory.py  test_cli_pretty_state.py  test_cli_savepatch.py  test_cli_tools.py  test_e2e_multi_agent_full.py  test_event_batcher.py  test_hitl_record_replay.py  test_mcp_example.py  test_mcp_recording_simulated.py  test_memory_synthesized_from_values.py  test_messages_aggregation.py  test_messages_tools_prompt_ctx.py  test_model_meta_record_enrichment.py  test_record_taps.py  test_recorder_sys_branch_label.py  test_recorder_thread_and_durability.py  test_replay_installers.py  test_replay_invariant_message.py  test_replay_prompt_overrides.py  test_replayer_fork_branch.py  test_retrieval_detection.py  test_retriever_provider_taps.py  test_snapshot_policy.py  test_stream_kwargs_subgraphs_fallback.py  test_tool_args_hashing.py  test_tool_classifier_nested_obj.py  test_version_and_snapshot_policy.py
